; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/wf/extr_wfc_client_stream.c_wfc_stream_destroy.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/wf/extr_wfc_client_stream.c_wfc_stream_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@.str = private unnamed_addr constant [15 x i8] c"%s: stream: %X\00", align 1
@VCOS_FUNCTION = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"%s: stream: %X ready to destroy?\00", align 1
@.str.2 = private unnamed_addr constant [43 x i8] c"%s: stream: %X destroyed when unregistered\00", align 1
@.str.3 = private unnamed_addr constant [28 x i8] c"%s: stream %X doesn't exist\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wfc_stream_destroy(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @VCOS_FUNCTION, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @vcos_log_info(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %4, i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = call %struct.TYPE_4__* @wfc_stream_find_stream_ptr(i32 %7)
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %3, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %10 = icmp ne %struct.TYPE_4__* %9, null
  br i1 %10, label %11, label %31

11:                                               ; preds = %1
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp sgt i64 %14, 0
  br i1 %15, label %16, label %24

16:                                               ; preds = %11
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %19, -1
  store i64 %20, i64* %18, align 8
  %21 = load i32, i32* @VCOS_FUNCTION, align 4
  %22 = load i32, i32* %2, align 4
  %23 = call i32 @vcos_log_trace(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i32 %21, i32 %22)
  br label %28

24:                                               ; preds = %11
  %25 = load i32, i32* @VCOS_FUNCTION, align 4
  %26 = load i32, i32* %2, align 4
  %27 = call i32 @vcos_log_error(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.2, i64 0, i64 0), i32 %25, i32 %26)
  br label %28

28:                                               ; preds = %24, %16
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %30 = call i32 @wfc_stream_destroy_if_ready(%struct.TYPE_4__* %29)
  br label %35

31:                                               ; preds = %1
  %32 = load i32, i32* @VCOS_FUNCTION, align 4
  %33 = load i32, i32* %2, align 4
  %34 = call i32 @vcos_log_warn(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.3, i64 0, i64 0), i32 %32, i32 %33)
  br label %35

35:                                               ; preds = %31, %28
  ret void
}

declare dso_local i32 @vcos_log_info(i8*, i32, i32) #1

declare dso_local %struct.TYPE_4__* @wfc_stream_find_stream_ptr(i32) #1

declare dso_local i32 @vcos_log_trace(i8*, i32, i32) #1

declare dso_local i32 @vcos_log_error(i8*, i32, i32) #1

declare dso_local i32 @wfc_stream_destroy_if_ready(%struct.TYPE_4__*) #1

declare dso_local i32 @vcos_log_warn(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
